--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="ingredients-group">
         <h5>For the Chicken Marinade:</h5>
         <ul class="ingredients-list">
-          <li>(500g) boneless, skinless chicken breasts or thighs (cut into bite-size pieces)</li>
+          <li>(500g) boneless, skinless <br>chicken breasts or thighs</li>
           <li>1 cup plain yogurt</li>
           <li>1 tbsp lemon juice</li>
           <li>2 tsp garam masala</li>
@@ -137,6 +137,7 @@
     <section id="final-assembly" class="final-assembly">
       <h3 class="section-title">Final Assembly:</h3>
       <p>Serve the butter chicken hot, garnished with fresh coriander leaves. Pair it with a side of fluffy basmati rice and warm, buttery naan bread for a truly comforting and flavorful feast.</p>
+      <img src="Butter Chicken Final.jpg" alt="butter chicken final assembly" style="max-width: 300px;">
     </section>
     
     <hr class="section-divider">
